[gd_scene load_steps=10 format=3 uid="uid://fyl2otukb76o"]

[ext_resource type="Script" path="res://Scenes/Weapons/Wand/Wand.gd" id="1_qpvbx"]
[ext_resource type="Texture2D" uid="uid://dyd5fhmry5vx8" path="res://Assets/Sprites/wand.png" id="2_7ft7b"]
[ext_resource type="Texture2D" uid="uid://tl6ufo75r4ti" path="res://Assets/Sprites/fire.png" id="2_kbc4r"]
[ext_resource type="AudioStream" uid="uid://ctngp26o53olk" path="res://Assets/Audio/short-fireball-woosh-6146.mp3" id="4_lcl1h"]
[ext_resource type="AudioStream" uid="uid://dr2dq8iifwpgq" path="res://Assets/Audio/rock-smash.mp3" id="5_p8bqh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_or1pd"]
size = Vector2(6, 17)

[sub_resource type="Animation" id="Animation_j1aiq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShootingSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_c1bq4"]
resource_name = "shoot"
length = 0.14
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShootingSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(2, 0), Vector2i(1, 0), Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShootingSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.14),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4uelt"]
_data = {
"RESET": SubResource("Animation_j1aiq"),
"shoot": SubResource("Animation_c1bq4")
}

[node name="Wand" type="Area2D"]
texture_filter = 1
script = ExtResource("1_qpvbx")
pelletCount = 10
spread = 0.3

[node name="WandCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_or1pd")

[node name="WandSprite" type="Sprite2D" parent="."]
position = Vector2(0, 9)
rotation = 3.14159
texture = ExtResource("2_7ft7b")

[node name="WandEnd" type="Marker2D" parent="."]
position = Vector2(0, 18)

[node name="ShootingSprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.219608, 0.85098, 0.176471, 1)
position = Vector2(-7.45058e-09, 23)
rotation = 3.13368
texture = ExtResource("2_kbc4r")
hframes = 4

[node name="ShootingAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4uelt")
}

[node name="GunCooldown" type="Timer" parent="."]
autostart = true

[node name="FireShot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_lcl1h")

[node name="RockShot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_p8bqh")

[connection signal="timeout" from="GunCooldown" to="." method="_on_gun_cooldown_timeout"]
